--- a/.golangci.yml
+++ b/.golangci.yml
@@ -122,3 +122,6 @@ issues:
         - goerr113
         - maintidx
         - paralleltest # we don't want to run the integration tests in parallel because we want deterministic results
+    - path: acceptance_test
+      linters:
+        - paralleltest
