--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,3 +18,6 @@ jobs:
 
       - name: Test
         run: make test GOTEST_FLAGS="-v -count=1 -race"
+
+      - name: Integration test
+        run: make test-integration MONGODB_STARTUP_TIMEOUT=8 GOTEST_FLAGS="-v -count=1 -race"
