--- a/connector.yaml
+++ b/connector.yaml
@@ -2,7 +2,80 @@ version: "1.0"
 specification:
   name: mongo
   summary: The MongoDB source and destination plugin for Conduit, written in Go.
-  description: "## Source\n\nThe MongoDB Source Connector connects to a MongoDB with the provided `uri`, `db`\nand `collection` and starts creating records for each change detected in a\ncollection.\n\nUpon starting, the Source takes a snapshot of a given collection in the\ndatabase, then switches into CDC mode. In CDC mode, the plugin reads events from\na [Change Stream](https://www.mongodb.com/docs/manual/changeStreams/). In order\nfor this to work correctly, your MongoDB instance must\nmeet [the criteria](https://www.mongodb.com/docs/manual/changeStreams/#availability)\nspecified on the official website.\n\n### Snapshot Capture\n\nWhen the connector first starts, snapshot mode is enabled. The connector reads\nall rows of a collection in batches using\na [cursor-based](https://www.mongodb.com/docs/drivers/go/current/fundamentals/crud/read-operations/cursor/)\npagination,\nlimiting the rows by `batchSize`. The connector stores the last processed\nelement value of an `orderingColumn` in a position, so the snapshot process can\nbe paused and resumed without losing data. Once all rows in that initial\nsnapshot are read the connector switches into CDC mode.\n\nThis behavior is enabled by default, but can be turned off by adding\n`\"snapshot\": false` to the Source configuration.\n\n### Change Data Capture\n\nThe connector implements CDC features for MongoDB by using a Change Stream that\nlistens to changes in the configured collection. Every detected change is\nconverted into a record and returned in the call to `Read`. If there is no\navailable record when `Read` is called, the connector returns\n`sdk.ErrBackoffRetry` error.\n\nThe connector stores a `resumeToken` of every Change Stream event in a position,\nso the CDC process is resumble.\n\n> **Warning**\n>\n> [Azure CosmosDB for MongoDB](https://learn.microsoft.com/en-us/azure/cosmos-db/mongodb/change-streams)\n> has very limited support for Change Streams, so they cannot be used for CDC.\n> If CDC is not possible, like in the case with CosmosDB, the connector only\n> supports detecting insert operations by polling for new documents.\n\n### Key handling\n\nThe connector always uses the `_id` field as a key.\n\nIf the `_id` field is `bson.ObjectID` the connector converts it to a string when\ntransferring a record to a destination, otherwise, it leaves it unchanged.\n\n## Destination\n\nThe MongoDB Destination takes a `opencdc.Record` and parses it into a valid\nMongoDB query. The Destination is designed to handle different payloads and\nkeys. Because of this, each record is individually parsed and written.\n\n### Collection name\n  \nIf a record contains an `opencdc.collection` property in its metadata it will be\nwritten in that collection, otherwise it will fall back to use the `collection`\nconfigured in the connector. Thus, a Destination can support multiple\ncollections in the same connector, as long as the user has proper access to\nthose collections.\n\n### Key handling\n\nThe connector uses all keys from an `opencdc.Record` when updating and deleting\ndocuments.\n\nIf the `_id` field can be converted to a `bson.ObjectID`, the connector converts\nit, otherwise, it uses it as it is."
+  description: |
+    ## Source
+
+    The MongoDB Source Connector connects to a MongoDB with the provided `uri`, `db`
+    and `collection` and starts creating records for each change detected in a
+    collection.
+
+    Upon starting, the Source takes a snapshot of a given collection in the
+    database, then switches into CDC mode. In CDC mode, the plugin reads events from
+    a [Change Stream](https://www.mongodb.com/docs/manual/changeStreams/). In order
+    for this to work correctly, your MongoDB instance must
+    meet [the criteria](https://www.mongodb.com/docs/manual/changeStreams/#availability)
+    specified on the official website.
+
+    ### Snapshot Capture
+
+    When the connector first starts, snapshot mode is enabled. The connector reads
+    all rows of a collection in batches using
+    a [cursor-based](https://www.mongodb.com/docs/drivers/go/current/fundamentals/crud/read-operations/cursor/)
+    pagination,
+    limiting the rows by `batchSize`. The connector stores the last processed
+    element value of an `orderingColumn` in a position, so the snapshot process can
+    be paused and resumed without losing data. Once all rows in that initial
+    snapshot are read the connector switches into CDC mode.
+
+    This behavior is enabled by default, but can be turned off by adding
+    `"snapshot": false` to the Source configuration.
+
+    ### Change Data Capture
+
+    The connector implements CDC features for MongoDB by using a Change Stream that
+    listens to changes in the configured collection. Every detected change is
+    converted into a record and returned in the call to `Read`. If there is no
+    available record when `Read` is called, the connector returns
+    `sdk.ErrBackoffRetry` error.
+
+    The connector stores a `resumeToken` of every Change Stream event in a position,
+    so the CDC process is resumble.
+
+    > **Warning**
+    >
+    > [Azure CosmosDB for MongoDB](https://learn.microsoft.com/en-us/azure/cosmos-db/mongodb/change-streams)
+    > has very limited support for Change Streams, so they cannot be used for CDC.
+    > If CDC is not possible, like in the case with CosmosDB, the connector only
+    > supports detecting insert operations by polling for new documents.
+
+    ### Key handling
+
+    The connector always uses the `_id` field as a key.
+
+    If the `_id` field is `bson.ObjectID` the connector converts it to a string when
+    transferring a record to a destination, otherwise, it leaves it unchanged.
+
+    ## Destination
+
+    The MongoDB Destination takes a `opencdc.Record` and parses it into a valid
+    MongoDB query. The Destination is designed to handle different payloads and
+    keys. Because of this, each record is individually parsed and written.
+
+    ### Collection name
+
+    If a record contains an `opencdc.collection` property in its metadata it will be
+    written in that collection, otherwise it will fall back to use the `collection`
+    configured in the connector. Thus, a Destination can support multiple
+    collections in the same connector, as long as the user has proper access to
+    those collections.
+
+    ### Key handling
+
+    The connector uses all keys from an `opencdc.Record` when updating and deleting
+    documents.
+
+    If the `_id` field can be converted to a `bson.ObjectID`, the connector converts
+    it, otherwise, it uses it as it is.
   version: (devel)
   author: Meroxa, Inc.
   source:
