--- a/.golangci.yml
+++ b/.golangci.yml
@@ -72,13 +72,13 @@ linters:
     - stylecheck
     - sqlclosecheck
     - tagliatelle
-    - tenv
     - thelper
     - tparallel
     - typecheck
     - unconvert
     - unparam
     - unused
+    - usetesting
     - wastedassign
     - whitespace
     - wrapcheck
