--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,8 +2,8 @@ linters-settings:
   gofmt:
     simplify: false
   govet:
-    shadow:
-      strict: true
+    disable:
+      - shadow
   nolintlint:
     allow-unused: false # report any unused nolint directives
     require-explanation: true # require an explanation for nolint directives
